src/test/ui/parser/attr.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/attr.rs:7:3
   |
LL | #![lang(foo)] //~ ERROR an inner attribute is not permitted in this context
   |   ^
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files. Outer attributes, like `#[test]`, annotate the item following them.

error: aborting due to previous error

